--- a/archives/toutiao-search/2024-02-14.md
+++ b/archives/toutiao-search/2024-02-14.md
@@ -1,54 +1,71 @@
 # 2024-02-14
 
-共 115 条
+共 128 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Feb 14 2024 07:00:35 GMT+0800 (China Standard Time) -->
-1. [俄罗斯将爱沙尼亚总理列入通缉名单](https://so.toutiao.com/search?keyword=俄罗斯将爱沙尼亚总理列入通缉名单)
+<!-- 最后更新时间 Wed Feb 14 2024 08:24:44 GMT+0800 (China Standard Time) -->
 1. [以方称将提供撤离拉法的安全通道](https://so.toutiao.com/search?keyword=以方称将提供撤离拉法的安全通道)
+1. [加沙人饿得开始吃鸟食](https://so.toutiao.com/search?keyword=加沙人饿得开始吃鸟食)
 1. [感受传统佳节里的独特韵味](https://so.toutiao.com/search?keyword=感受传统佳节里的独特韵味)
-1. [五路财神都有谁](https://so.toutiao.com/search?keyword=五路财神都有谁)
+1. [俄罗斯将爱沙尼亚总理列入通缉名单](https://so.toutiao.com/search?keyword=俄罗斯将爱沙尼亚总理列入通缉名单)
 1. [中国首富手握两大“印钞机”](https://so.toutiao.com/search?keyword=中国首富手握两大“印钞机”)
 1. [春节三亚回程机票暴涨至万元](https://so.toutiao.com/search?keyword=春节三亚回程机票暴涨至万元)
-1. [养老院老人想儿子借手机打电话](https://so.toutiao.com/search?keyword=养老院老人想儿子借手机打电话)
-1. [几人给舅舅拜年扑空将礼物扔进院里](https://so.toutiao.com/search?keyword=几人给舅舅拜年扑空将礼物扔进院里)
-1. [男子总结今年春节三大反常现象](https://so.toutiao.com/search?keyword=男子总结今年春节三大反常现象)
-1. [《第二十条》对商业片“降维打击”](https://so.toutiao.com/search?keyword=《第二十条》对商业片“降维打击”)
-1. [开40万国产新能源车回村被笑杂牌](https://so.toutiao.com/search?keyword=开40万国产新能源车回村被笑杂牌)
+1. [迎财神的正确打开方式](https://so.toutiao.com/search?keyword=迎财神的正确打开方式)
+1. [哈尔滨冰雪大世界将闭园](https://so.toutiao.com/search?keyword=哈尔滨冰雪大世界将闭园)
+1. [17位世界级球星来港贺岁比赛](https://so.toutiao.com/search?keyword=17位世界级球星来港贺岁比赛)
+1. [河南小豫米方言喊全国宝宝过年来玩](https://so.toutiao.com/search?keyword=河南小豫米方言喊全国宝宝过年来玩)
+1. [哈尔滨多个景点停止营业或撤场拆除](https://so.toutiao.com/search?keyword=哈尔滨多个景点停止营业或撤场拆除)
 1. [董事长儿子2.1亿办婚礼？假的](https://so.toutiao.com/search?keyword=董事长儿子2.1亿办婚礼？假的)
+1. [春晚走位均精心设计并被准确呈现](https://so.toutiao.com/search?keyword=春晚走位均精心设计并被准确呈现)
+1. [妹妹磕头时被哥哥们“报复”](https://so.toutiao.com/search?keyword=妹妹磕头时被哥哥们“报复”)
+1. [打卡财政部](https://so.toutiao.com/search?keyword=打卡财政部)
+1. [五路财神都有谁](https://so.toutiao.com/search?keyword=五路财神都有谁)
+1. [几人给舅舅拜年扑空将礼物扔进院里](https://so.toutiao.com/search?keyword=几人给舅舅拜年扑空将礼物扔进院里)
+1. [开40万国产新能源车回村被笑杂牌](https://so.toutiao.com/search?keyword=开40万国产新能源车回村被笑杂牌)
 1. [撒贝宁李白带龙凤胎回武汉过年](https://so.toutiao.com/search?keyword=撒贝宁李白带龙凤胎回武汉过年)
 1. [余承东开问界M9回深圳称全程无接管](https://so.toutiao.com/search?keyword=余承东开问界M9回深圳称全程无接管)
-1. [较强冷空气开始影响我国大部地区](https://so.toutiao.com/search?keyword=较强冷空气开始影响我国大部地区)
-1. [河南小豫米方言喊全国宝宝过年来玩](https://so.toutiao.com/search?keyword=河南小豫米方言喊全国宝宝过年来玩)
+1. [《第二十条》对商业片“降维打击”](https://so.toutiao.com/search?keyword=《第二十条》对商业片“降维打击”)
+1. [男子总结今年春节三大反常现象](https://so.toutiao.com/search?keyword=男子总结今年春节三大反常现象)
+1. [《八戒之天蓬下界》呼吁增加排片](https://so.toutiao.com/search?keyword=《八戒之天蓬下界》呼吁增加排片)
+1. [回村后新能源车主们的现状](https://so.toutiao.com/search?keyword=回村后新能源车主们的现状)
+1. [张艺兴连包18场支持贾玲新电影](https://so.toutiao.com/search?keyword=张艺兴连包18场支持贾玲新电影)
+1. [甜馨回应压岁钱争议](https://so.toutiao.com/search?keyword=甜馨回应压岁钱争议)
+1. [小杨哥掉水里 大杨哥被鞭炮炸伤](https://so.toutiao.com/search?keyword=小杨哥掉水里+大杨哥被鞭炮炸伤)
 1. [郭晶晶一家在伦敦被偶遇](https://so.toutiao.com/search?keyword=郭晶晶一家在伦敦被偶遇)
+1. [回村过年的猫找不到一块下脚地](https://so.toutiao.com/search?keyword=回村过年的猫找不到一块下脚地)
+1. [养老院老人想儿子借手机打电话](https://so.toutiao.com/search?keyword=养老院老人想儿子借手机打电话)
+1. [75国向西方发起全球性索赔](https://so.toutiao.com/search?keyword=75国向西方发起全球性索赔)
+1. [媒体：年轻人不回家过年不是逃避](https://so.toutiao.com/search?keyword=媒体：年轻人不回家过年不是逃避)
+1. [一只鸡从天而降砸坏红绿灯看懵交警](https://so.toutiao.com/search?keyword=一只鸡从天而降砸坏红绿灯看懵交警)
+1. [董宇辉回村后喂牛抓鱼生活好惬意](https://so.toutiao.com/search?keyword=董宇辉回村后喂牛抓鱼生活好惬意)
 1. [22岁华人女孩徒步失联9天不幸遇难](https://so.toutiao.com/search?keyword=22岁华人女孩徒步失联9天不幸遇难)
+1. [三兄弟聚餐喝酒妻子叫老母亲来教育](https://so.toutiao.com/search?keyword=三兄弟聚餐喝酒妻子叫老母亲来教育)
+1. [人社部：2024将更突出就业优先导向](https://so.toutiao.com/search?keyword=人社部：2024将更突出就业优先导向)
+1. [女子开车去拜年车头直接撞进屋](https://so.toutiao.com/search?keyword=女子开车去拜年车头直接撞进屋)
+1. [较强冷空气开始影响我国大部地区](https://so.toutiao.com/search?keyword=较强冷空气开始影响我国大部地区)
+1. [今日初五 一起财运兴龙](https://so.toutiao.com/search?keyword=今日初五+一起财运兴龙)
+1. [大早上女儿扛一麻袋红包回家](https://so.toutiao.com/search?keyword=大早上女儿扛一麻袋红包回家)
+1. [男子等红灯偶遇赵丽颖](https://so.toutiao.com/search?keyword=男子等红灯偶遇赵丽颖)
+1. [李雪琴第一次见“瘦贾玲”心疼坏了](https://so.toutiao.com/search?keyword=李雪琴第一次见“瘦贾玲”心疼坏了)
+1. [女生捡宠物店的狗后去店里买牵引绳](https://so.toutiao.com/search?keyword=女生捡宠物店的狗后去店里买牵引绳)
+1. [香港贺岁杯复办 世界明星队大胜](https://so.toutiao.com/search?keyword=香港贺岁杯复办+世界明星队大胜)
+1. [姐弟6人时隔45年坐在奶奶屋前合影](https://so.toutiao.com/search?keyword=姐弟6人时隔45年坐在奶奶屋前合影)
+1. [男友去女方家喝断片被一大家人照顾](https://so.toutiao.com/search?keyword=男友去女方家喝断片被一大家人照顾)
+1. [大学生回村过年被拉去参加学子联谊](https://so.toutiao.com/search?keyword=大学生回村过年被拉去参加学子联谊)
+1. [朱广权说这三天我们都没笑](https://so.toutiao.com/search?keyword=朱广权说这三天我们都没笑)
+1. [港媒：特朗普言论令台湾一些人担忧](https://so.toutiao.com/search?keyword=港媒：特朗普言论令台湾一些人担忧)
 1. [00后整顿过年红包](https://so.toutiao.com/search?keyword=00后整顿过年红包)
 1. [微信“摇一摇”功能消失](https://so.toutiao.com/search?keyword=微信“摇一摇”功能消失)
-1. [回村后新能源车主们的现状](https://so.toutiao.com/search?keyword=回村后新能源车主们的现状)
 1. [外国人体验中式美学](https://so.toutiao.com/search?keyword=外国人体验中式美学)
-1. [张艺兴连包18场支持贾玲新电影](https://so.toutiao.com/search?keyword=张艺兴连包18场支持贾玲新电影)
-1. [75国向西方发起全球性索赔](https://so.toutiao.com/search?keyword=75国向西方发起全球性索赔)
-1. [甜馨回应压岁钱争议](https://so.toutiao.com/search?keyword=甜馨回应压岁钱争议)
-1. [《八戒之天蓬下界》呼吁增加排片](https://so.toutiao.com/search?keyword=《八戒之天蓬下界》呼吁增加排片)
-1. [董宇辉回村后喂牛抓鱼生活好惬意](https://so.toutiao.com/search?keyword=董宇辉回村后喂牛抓鱼生活好惬意)
-1. [港媒：特朗普言论令台湾一些人担忧](https://so.toutiao.com/search?keyword=港媒：特朗普言论令台湾一些人担忧)
 1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
 1. [台湾网红夜闯柬埔寨诈骗园区直播](https://so.toutiao.com/search?keyword=台湾网红夜闯柬埔寨诈骗园区直播)
 1. [荷兰首相与以色列总理举行会谈](https://so.toutiao.com/search?keyword=荷兰首相与以色列总理举行会谈)
-1. [媒体：年轻人不回家过年不是逃避](https://so.toutiao.com/search?keyword=媒体：年轻人不回家过年不是逃避)
-1. [小杨哥掉水里 大杨哥被鞭炮炸伤](https://so.toutiao.com/search?keyword=小杨哥掉水里+大杨哥被鞭炮炸伤)
 1. [泛海控股董事长内幕交易曝光](https://so.toutiao.com/search?keyword=泛海控股董事长内幕交易曝光)
 1. [硬是把老虎养成了大猫](https://so.toutiao.com/search?keyword=硬是把老虎养成了大猫)
 1. [为什么这个龙年叫甲辰龙年](https://so.toutiao.com/search?keyword=为什么这个龙年叫甲辰龙年)
-1. [大早上女儿扛一麻袋红包回家](https://so.toutiao.com/search?keyword=大早上女儿扛一麻袋红包回家)
 1. [万米深井区域已发现10亿吨油气储量](https://so.toutiao.com/search?keyword=万米深井区域已发现10亿吨油气储量)
-1. [女生捡宠物店的狗后去店里买牵引绳](https://so.toutiao.com/search?keyword=女生捡宠物店的狗后去店里买牵引绳)
-1. [回村过年的猫找不到一块下脚地](https://so.toutiao.com/search?keyword=回村过年的猫找不到一块下脚地)
-1. [男友去女方家喝断片被一大家人照顾](https://so.toutiao.com/search?keyword=男友去女方家喝断片被一大家人照顾)
-1. [三兄弟聚餐喝酒妻子叫老母亲来教育](https://so.toutiao.com/search?keyword=三兄弟聚餐喝酒妻子叫老母亲来教育)
 1. [《欢乐家长群》初一不敢自己上厕所](https://so.toutiao.com/search?keyword=《欢乐家长群》初一不敢自己上厕所)
 1. [国际能源署：今年油价走势温和](https://so.toutiao.com/search?keyword=国际能源署：今年油价走势温和)
-1. [女子开车去拜年车头直接撞进屋](https://so.toutiao.com/search?keyword=女子开车去拜年车头直接撞进屋)
 1. [瓦塞尔：文班每场都能做出疯狂的事](https://so.toutiao.com/search?keyword=瓦塞尔：文班每场都能做出疯狂的事)
 1. [演员王东承认家暴](https://so.toutiao.com/search?keyword=演员王东承认家暴)
 1. [菲律宾山体滑坡事故已致71人死亡](https://so.toutiao.com/search?keyword=菲律宾山体滑坡事故已致71人死亡)
@@ -59,7 +76,6 @@
 1. [英媒：乌克兰火电站被炸严重受损](https://so.toutiao.com/search?keyword=英媒：乌克兰火电站被炸严重受损)
 1. [90后女子以自身经历劝告相亲的女生](https://so.toutiao.com/search?keyword=90后女子以自身经历劝告相亲的女生)
 1. [云南17名党员公职人员被公开通报](https://so.toutiao.com/search?keyword=云南17名党员公职人员被公开通报)
-1. [人社部：2024将更突出就业优先导向](https://so.toutiao.com/search?keyword=人社部：2024将更突出就业优先导向)
 1. [西湖“打捞神器”又火了](https://so.toutiao.com/search?keyword=西湖“打捞神器”又火了)
 1. [河南开封14岁女孩失联](https://so.toutiao.com/search?keyword=河南开封14岁女孩失联)
 1. [倪妮送新年祝福](https://so.toutiao.com/search?keyword=倪妮送新年祝福)
@@ -97,12 +113,10 @@
 1. [媒体：县城是网约车的失意之地](https://so.toutiao.com/search?keyword=媒体：县城是网约车的失意之地)
 1. [浙江省人民大会堂为游客提供车位](https://so.toutiao.com/search?keyword=浙江省人民大会堂为游客提供车位)
 1. [00后女警上岗 一天要接100多个电话](https://so.toutiao.com/search?keyword=00后女警上岗+一天要接100多个电话)
-1. [男子等红灯偶遇赵丽颖](https://so.toutiao.com/search?keyword=男子等红灯偶遇赵丽颖)
 1. [055型万吨大驱搏击风浪](https://so.toutiao.com/search?keyword=055型万吨大驱搏击风浪)
 1. [媒体人：泰山队以赛代练效果一般](https://so.toutiao.com/search?keyword=媒体人：泰山队以赛代练效果一般)
 1. [一年不见贾玲接梗还是很快](https://so.toutiao.com/search?keyword=一年不见贾玲接梗还是很快)
 1. [郭正亮预测民众党民代未来走向](https://so.toutiao.com/search?keyword=郭正亮预测民众党民代未来走向)
-1. [姐弟6人时隔45年坐在奶奶屋前合影](https://so.toutiao.com/search?keyword=姐弟6人时隔45年坐在奶奶屋前合影)
 1. [以称将与多方就释放被扣押人员会谈](https://so.toutiao.com/search?keyword=以称将与多方就释放被扣押人员会谈)
 1. [两只袋鼠打架工作人员用铁锹劝架](https://so.toutiao.com/search?keyword=两只袋鼠打架工作人员用铁锹劝架)
 1. [看福建游神咚咚咚净炉手敬香众大神](https://so.toutiao.com/search?keyword=看福建游神咚咚咚净炉手敬香众大神)
@@ -112,7 +126,6 @@
 1. [西安鼓楼近在眼前却又远在天边](https://so.toutiao.com/search?keyword=西安鼓楼近在眼前却又远在天边)
 1. [有一种友谊叫贾玲和张小斐](https://so.toutiao.com/search?keyword=有一种友谊叫贾玲和张小斐)
 1. [蔡国庆差点拒唱《常回家看看》](https://so.toutiao.com/search?keyword=蔡国庆差点拒唱《常回家看看》)
-1. [大学生回村过年被拉去参加学子联谊](https://so.toutiao.com/search?keyword=大学生回村过年被拉去参加学子联谊)
 1. [导演韩延谈拍绝症病人的故事](https://so.toutiao.com/search?keyword=导演韩延谈拍绝症病人的故事)
 1. [街头美食之西双版纳跳跳虾](https://so.toutiao.com/search?keyword=街头美食之西双版纳跳跳虾)
 1. [女生和男友家人吃饭高歌《好日子》](https://so.toutiao.com/search?keyword=女生和男友家人吃饭高歌《好日子》)
